--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </tr>
             <tr  class="row2" style="width:600px; height:266px">
                 <td> <h4> Main Blog Post Heading </h4> 
-                <p> Lorem ipsum dolor sit amet, legere dicunt et pro. Nullam denique maluisset ad has. Eam atomorum complectitur ea, vim ut ornatus singulis. Tibique salutandi similique nec at, vim te iriure honestatis omittantur, nam vide scripta euismod at. </p></td>
-                
+                <p> Lorem ipsum dolor sit amet, legere dicunt et pro. Nullam denique maluisset ad has. Eam atomorum complectitur ea, vim ut ornatus singulis. Tibique salutandi similique nec at, vim te iriure honestatis omittantur, nam vide scripta euismod at. </p>
+                <div class="button" > Details </div></td>
             
                 </tr>
             <tr  class="row2" colspan="3" style="width:600px; height:266px"> </tr>
