--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
                 </td>
                 
                 </tr>
-            <tr  class="row7"> </tr>
-            <tr  class="row8"> </tr>
+            <tr  class="row7"> <td> <h3> Title Goes Here</h3>
+                <p> Lorem ipsum dolor sit amet, alia nulla simul has ne, sit nusquam placerat ne. In mei <br> delicata aliquando, purto vocent nusquam no vis, ne nec tincidunt disputando. Pro <br> feugiat quaerendum in.</p></td> </tr>
+           
         </tbody>
         </table>
             </div>
