--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </table>
             </div>
          
-        <div id="footer"> <p1> copyright 2015-built with a gnomer</p1><p2> View Online / Unsubcribe </p2></div>
+        <div id="footer"> <p> <span>copyright 2015 - built with a gnomer</span><br> <br> View Online / Unsubcribe </p></div>
        
     </div>
     </body>
