--- a/index.html
+++ b/index.html
@@ -12,17 +12,30 @@
 
 <body>
     <div class="container">
+
+
+        <!--       The heading and first row -->
         <div class="row header">
 
-            <div class="large-6 columns heading">
+            <div class="large-5  columns heading">
 
                 <h1>Gnome</h1>
             </div>
-            <div class="large-6 columns heading2">
-                <p>Having Trouble Viewing it? <span>View online </span></p>
+            <div class="large-7  columns heading2">
+                <p>Having Trouble Viewing it? <span> View online. </span></p>
             </div>
         </div>
 
+        <!--       The heading and first row -->
+
+<div class="row two">            <div class="large-12 columns ">
+                <h4><i>"Simply send</i> <br> beautiful emails<br>
+           to people who<br>matter."</h4>
+
+                <p class="soft"><i>The email marketing app for smart business.</i></p>
+
+            </div>
+        </div>
     </div>
     <script src="js/vendor/jquery.min.js"></script>
     <script src="js/vendor/what-input.min.js"></script>
