row four, professional, versatile

--- a/index.html
+++ b/index.html
@@ -28,14 +28,61 @@
 
         <!--       The heading and first row -->
 
-<div class="row two">            <div class="large-12 columns ">
+        <div class="row two">
+            <div class="large-12 columns ">
                 <h4><i>"Simply send</i> <br> beautiful emails<br>
            to people who<br>matter."</h4>
 
-                <p class="soft"><i>The email marketing app for smart business.</i></p>
+                <p1 class="soft"><i>The email marketing app for smart business.</i></p1>
 
             </div>
         </div>
+
+        <!--        row three with main blog posting content-->
+
+
+        <div class="row three blog-post">
+            <div class="large-1 columns">
+                <br>
+            </div>
+
+            <div class="large-10 columns blog">
+                <h5>Main Blog Post Heading </h5>
+                <p>Lorem ipsum Dolar sit Lorem ipsum Dolar sit Lorem ipsum Dolar sit Lorem ipsum Dolar sit Lorem ipsum Dolar sit. Lorem ipsum Dolar sit. Lorem ipsum Dolar sit. Lorem ipsum Dolar sitLorem ipsum Dolar sit.Nular fasiliti</p>
+            </div>
+
+            <div class="large-1 columns">
+                <br>
+            </div>
+
+        </div>
+        <!--        row four with four columns-->
+        <div class="row four">
+            <div class="large-4 columns ping">
+                <img src="img/logo_editable.png" />
+                <br>
+                <h6>Editable</h6>
+                <p class="cont">Lorem Ipsum dolar sit
+                    <br> amet adipisce.</p>
+            </div>
+            <div class="large-4 columns ping">
+                <img src="img/logo_versatile.png" />
+                <br>
+                <h6>Versatile</h6>
+                <p class="cont">Lorem Ipsum dolar sit
+                    <br> amet adipisce.</p>
+            </div>
+            <div class="large-4 columns ping">
+                <img src="img/logo_pro.png" />
+                <br>
+                <h6>
+                Professional</h6>
+                <p class="cont">Lorem Ipsum dolar sit
+                    <br> amet adipisce.</p>
+            </div>
+
+        </div>
+        <!--        row four with four columns-->
     </div>
     <script src="js/vendor/jquery.min.js"></script>
     <script src="js/vendor/what-input.min.js"></script>
