added row 5 for content and image

--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
 
         </div>
         <!--        row four with four columns-->
+        <div class="row five">
+
+            <div class="large-6 columns"></div>
+            <div class="large-6 columns"></div>
+        </div>
     </div>
     <script src="js/vendor/jquery.min.js"></script>
     <script src="js/vendor/what-input.min.js"></script>
