--- a/index.html
+++ b/index.html
@@ -83,10 +83,25 @@
 
         </div>
         <!--        row four with four columns-->
+
+
+        <!--        row five with
+        two columns-->
+
+
         <div class="row five">
 
-            <div class="large-6 columns"></div>
-            <div class="large-6 columns"></div>
+            <div class="large-6 columns content">
+                <h6 class="aside">Title Goes Here</h6>
+                <p class="side">Lorem ipsum dolar sit amet it sole
+                    <br>consectetur adipiscing elit. Duis
+                    <br>quis lectus at arcu egestas fringa
+                    <br> fermentum eget.</p>
+
+            </div>
+            <div class="large-6 columns image">
+                <img src="img/img1.jpg" />
+            </div>
         </div>
     </div>
     <script src="js/vendor/jquery.min.js"></script>
