row six image and content

--- a/index.html
+++ b/index.html
@@ -103,6 +103,23 @@
                 <img src="img/img1.jpg" />
             </div>
         </div>
+
+        <!--            row 6 with 2 columns, image and content-->
+
+        <div class="row six">
+
+            <div class="large-6 columns image">
+                <img src="img/img2.jpg" />
+            </div>
+            <div class="large-6 columns content">
+                <h6 class="aside">Title Goes Here</h6>
+                <p class="side2">Lorem ipsum dolar sit amet it sole
+                    <br>consectetur adipiscing elit. Duis
+                    <br>quis lectus at arcu egestas fringa
+                    <br> fermentum eget.</p>
+
+            </div>
+        </div>
     </div>
     <script src="js/vendor/jquery.min.js"></script>
     <script src="js/vendor/what-input.min.js"></script>
