row six positioning

--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
         </div>
         <!--        row four with four columns-->
         <div class="row four">
-            <div class="large-4 columns ping">
+            <div class="small-12 large-4 columns ping">
                 <img src="img/logo_editable.png" />
                 <br>
                 <h6>Editable</h6>
                 <p class="cont">Lorem Ipsum dolar sit
                     <br> amet adipisce.</p>
             </div>
-            <div class="large-4 columns ping">
+            <div class=" small-12 large-4 columns ping">
                 <img src="img/logo_versatile.png" />
                 <br>
                 <h6>Versatile</h6>
                 <p class="cont">Lorem Ipsum dolar sit
                     <br> amet adipisce.</p>
             </div>
-            <div class="large-4 columns ping">
+            <div class=" small-12 large-4 columns ping">
                 <img src="img/logo_pro.png" />
                 <br>
                 <h6>
@@ -91,7 +91,7 @@
 
         <div class="row five">
 
-            <div class="large-6 columns content">
+            <div class="large-6 columns content1">
                 <h6 class="aside">Title Goes Here</h6>
                 <p class="side">Lorem ipsum dolar sit amet it sole
                     <br>consectetur adipiscing elit. Duis
@@ -99,19 +99,18 @@
                     <br> fermentum eget.</p>
 
             </div>
-            <div class="large-6 columns image">
+            <div class="large-6 columns image1">
                 <img src="img/img1.jpg" />
             </div>
+
         </div>
-
         <!--            row 6 with 2 columns, image and content-->
-
         <div class="row six">
 
-            <div class="large-6 columns image">
+            <div class="large-6 columns image2">
                 <img src="img/img2.jpg" />
             </div>
-            <div class="large-6 columns content">
+            <div class="large-6 columns content2">
                 <h6 class="aside">Title Goes Here</h6>
                 <p class="side2">Lorem ipsum dolar sit amet it sole
                     <br>consectetur adipiscing elit. Duis
