row seven with ad space

--- a/index.html
+++ b/index.html
@@ -119,6 +119,13 @@
 
             </div>
         </div>
+        <div class="row seven green">
+            <div class="large-12 columns ">
+                <p class="ad">Ad Space
+                    <br>600 x 120px </p>
+            </div>
+
+        </div>
     </div>
     <script src="js/vendor/jquery.min.js"></script>
     <script src="js/vendor/what-input.min.js"></script>
