row eight with positioning

--- a/index.html
+++ b/index.html
@@ -126,6 +126,12 @@
             </div>
 
         </div>
+        <div class="row eight last">
+            <div class="large-12 columns">
+                <h6 class="aside">Title Goes Here</h6>
+                <p class="side2">Lorem ipsum dolar sit amet it sole consectetur adipiscing elit. Duis quis lectus at arcu egestas fringa fermentum eget.</p>
+            </div>
+        </div>
     </div>
     <script src="js/vendor/jquery.min.js"></script>
     <script src="js/vendor/what-input.min.js"></script>
