--- a/index.html
+++ b/index.html
@@ -41,19 +41,15 @@
         <!--        row three with main blog posting content-->
 
 
-        <div class="row three blog-post">
-            <div class="large-1 columns">
-                <br>
-            </div>
+        <div class="row three ">
 
-            <div class="large-10 columns blog">
+
+            <div class="large-12 columns blog">
                 <h5>Main Blog Post Heading </h5>
                 <p>Lorem ipsum Dolar sit Lorem ipsum Dolar sit Lorem ipsum Dolar sit Lorem ipsum Dolar sit Lorem ipsum Dolar sit. Lorem ipsum Dolar sit. Lorem ipsum Dolar sit. Lorem ipsum Dolar sitLorem ipsum Dolar sit.Nular fasiliti</p>
             </div>
 
-            <div class="large-1 columns">
-                <br>
-            </div>
+
 
         </div>
         <!--        row four with four columns-->
@@ -126,11 +122,18 @@
             </div>
 
         </div>
-        <div class="row eight last">
+        <div class="row eight ">
             <div class="large-12 columns">
                 <h6 class="aside">Title Goes Here</h6>
                 <p class="side2">Lorem ipsum dolar sit amet it sole consectetur adipiscing elit. Duis quis lectus at arcu egestas fringa fermentum eget.</p>
             </div>
+        </div>
+        <div class="row nine">
+            <div class="large-12 columns ">
+                <p class="footer"><span>copyright 2015-built with a gnomer</span>
+                    <br> View Online | Unsubscribe</p>
+            </div>
+
         </div>
     </div>
     <script src="js/vendor/jquery.min.js"></script>
